doc: update documentation
Signed-off-by: Maximillian Arruda <dearrudam@gmail.com>